Fixed issues with logo overlapping navbar

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
     align-items: center;
     position: sticky;
     top: 0;
+    z-index: 99;
 }
 
 #topnav a {
